--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
       <section class="section" id="home">
         <div class="container grid">
           <div class="image">
-            <img src="assets/img/NewPetSitter.jpg" alt="Smilling pets" />
+            <img
+              src="assets/img/NewLogoPetSitter.jpg"
+              alt="Cute girl holding a cat"
+            />
           </div>
 
           <div class="text">
@@ -73,7 +76,7 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="assets/img/NewSobre.jpg"
+              src="assets/img/About.jpg"
               alt="Logo petsitter and various pets"
             />
           </div>
@@ -112,7 +115,7 @@
           <div class="text">
             <header>
               <h2 class="title">Serviços</h2>
-              <p>
+              <p class="subtitle">
                 Que tal deixar as suas férias mais tranquilas com seus pets
                 sendo muito bem cuidados? <br />Com a
                 <strong>AmandaPetSitter</strong> você pode manter seus animais
@@ -167,6 +170,7 @@
       </section>
 
       <div class="divider-1"></div>
+
       <!--TESTIMONIALS-->
       <section class="section" id="testimonials">
         <div class="container">
@@ -309,6 +313,7 @@
       </section>
 
       <div class="divider-2"></div>
+
       <!--CONTACT-->
 
       <section class="section" id="contact">
@@ -320,8 +325,11 @@
             </p>
             <a
               href="https://api.whatsapp.com/send?phone=+5512988015035&text=Olá! Tenho interesse em obter mais informações"
-              class="button" target="_blank">
-              <i class="icon-whatsapp"></i>Entrar em contato</a>
+              class="button"
+              target="_blank"
+            >
+              <i class="icon-whatsapp"></i>Entrar em contato</a
+            >
           </div>
 
           <div class="links">
@@ -330,7 +338,8 @@
               <li>
                 <a
                   href="https://www.facebook.com/amandapetsittercare"
-                  target="_blank">
+                  target="_blank"
+                >
                   <i class="icon-facebook"></i>AmandaPetSitter
                 </a>
               </li>
@@ -339,7 +348,44 @@
           </div>
         </div>
       </section>
+      <div class="divider-1"></div>
     </main>
+
+    <!--FOOTER-->
+    <footer class="section">
+      <div class="container grid">
+        <div class="brand">
+          <a class="logo logo-alt" href="#home"
+            >amanda<span>petsitter</span>.</a
+          >
+          <p>©2021 AmandaPetSitter</p>
+          <p>Todos os direitos reservados.</p>
+        </div>
+
+        <div class="ongs">
+          <a href="https://www.taubate.sp.gov.br/adoteumamigo/" target="_blank">
+            <i class="icon-paw"></i>
+          </a>
+          <a
+            href="https://www.instagram.com/chicopataanimal/?hl=pt-br"
+            target="_blank"
+          >
+            <i class="icon-paw"></i>
+          </a>
+          <a
+            href="https://www.procure1amigo.com.br/default.aspx?cc=5256&cn=taubate"
+            target="_blank"
+          >
+            <i class="icon-paw"></i>
+          </a>
+          <a href="https://www.facebook.com/apatataubatesp/" target="_blank">
+            <i class="icon-paw"></i>
+          </a>
+        </div>
+      </div>
+    </footer>
+
+    <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
 
     <!--SWIPER-->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
