--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li><a class="title" href="#home">Início</a></li>
             <li><a class="title" href="#about">Sobre</a></li>
             <li><a class="title" href="#services">Serviços</a></li>
-            <li><a class="title" href="#testiominals">Depoimentos</a></li>
+            <li><a class="title" href="#testimonials">Depoimentos</a></li>
             <li><a class="title" href="#contact">Contato</a></li>
           </ul>
         </div>
@@ -336,14 +336,16 @@
             <ul class="grid">
               <li><i class="icon-phone"></i> (12) 98801-5035</li>
               <li>
-                <a
-                  href="https://www.facebook.com/amandapetsittercare"
-                  target="_blank"
-                >
+                <a href="https://www.facebook.com/amandapetsittercare"
+                  target="_blank">
                   <i class="icon-facebook"></i>AmandaPetSitter
                 </a>
               </li>
-              <li><i class="icon-mail"></i> amandinha06@hotmail.com</li>
+              <li>
+                <a href="mailto:amandinha06@hotmail.com">
+                    <i class="icon-mail"></i> amandinha06@hotmail.com
+                  </a>
+              </li>
             </ul>
           </div>
         </div>
