--- a/index.html
+++ b/index.html
@@ -127,8 +127,6 @@
                 <i class="icon-pet-care"></i>
                 <h3 class="title">Pet Care</h3>
                 <p>
-                  • Cuidados inclusos:
-                  <br />
                   - Alimentação (água e ração determinada pelo dono)
                   <br />
                   - Cuidado (companhia e brincadeiras)
@@ -141,20 +139,6 @@
                 </p>
               </div>
               <div class="card">
-                <i class="icon-dog"></i>
-                <h3 class="title">Valores Dog Walker</h3>
-                <p>
-                  Passeios com 30 minutos de duração:
-                  <br />
-                  • 1 cachorro: - passeio avulso: R$20
-                  <br />
-                  • 2 cachorros: - passeio avulso: R$25
-                  <br />
-                  Para um número maior de animais, favor entrar em contato para
-                  combinarmos!
-                </p>
-              </div>
-              <div class="card">
                 <i class="icon-cat"></i>
                 <h3 class="title">Valores Pet Sitting</h3>
                 <p>
@@ -162,6 +146,19 @@
                   <br />
                   O valor pode variar de acordo com a distância da residência e
                   não há valor adicional por animal a mais na casa
+                </p>
+              </div>
+              <div class="card">
+                <i class="icon-dog"></i>
+                <h3 class="title">Valores Dog Walker</h3>
+                <p>
+                  Passeios com 30 minutos de duração:
+                  <br />
+                  • 1 cachorro: passeio avulso: R$20 • 2 cachorros: passeio
+                  avulso: R$25
+                  <br />
+                  Para um número maior de animais, favor entrar em contato para
+                  combinarmos!
                 </p>
               </div>
             </div>
@@ -336,15 +333,17 @@
             <ul class="grid">
               <li><i class="icon-phone"></i> (12) 98801-5035</li>
               <li>
-                <a href="https://www.facebook.com/amandapetsittercare"
-                  target="_blank">
+                <a
+                  href="https://www.facebook.com/amandapetsittercare"
+                  target="_blank"
+                >
                   <i class="icon-facebook"></i>AmandaPetSitter
                 </a>
               </li>
               <li>
-                <a href="mailto:amandinha06@hotmail.com">
-                    <i class="icon-mail"></i> amandinha06@hotmail.com
-                  </a>
+                <a href="mailto:amandinha06@hotmail.com" target="_blank">
+                  <i class="icon-mail"></i> amandinha06@hotmail.com
+                </a>
               </li>
             </ul>
           </div>
