--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
                 <i class="icon-pet-care"></i>
                 <h3 class="title">Pet Care</h3>
                 <p>
-                  - Alimentação (água e ração determinada pelo dono)
+                  • Alimentação (água e ração determinada pelo dono)
                   <br />
-                  - Cuidado (companhia e brincadeiras)
+                  • Cuidado (companhia e brincadeiras)
                   <br />
-                  - Troca de água
+                  • Troca de água
                   <br />
-                  - Limpeza do ambiente (xixi e cocô)
+                  • Limpeza do ambiente (xixi e cocô)
                   <br />
-                  - Relatório multimídia enviado para dono
+                  • Relatório multimídia enviado para dono
                 </p>
               </div>
               <div class="card">
@@ -154,8 +154,9 @@
                 <p>
                   Passeios com 30 minutos de duração:
                   <br />
-                  • 1 cachorro: passeio avulso: R$20 • 2 cachorros: passeio
-                  avulso: R$25
+                  • 1 cachorro: passeio avulso: R$20
+                  <br />
+                  • 2 cachorros: passeio avulso: R$25
                   <br />
                   Para um número maior de animais, favor entrar em contato para
                   combinarmos!
@@ -359,7 +360,7 @@
           <a class="logo logo-alt" href="#home"
             >amanda<span>petsitter</span>.</a
           >
-          <p>©2021 AmandaPetSitter</p>
+          <p>©2021 AmandaAnay</p>
           <p>Todos os direitos reservados.</p>
         </div>
 
