--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
               para que ele não precise sair do ambiente ao qual está
               familiarizado. Entre em contato comigo!
             </p>
-            <a class="button" href="#">Agendar um horário</a>
+            <a
+              class="button"
+              href="https://api.whatsapp.com/send?phone=+5512988015035&text=Olá! Tenho interesse em obter mais informações"
+              target="_blank"
+              >Agendar um horário</a
+            >
           </div>
         </div>
       </section>
@@ -361,7 +366,7 @@
             >amanda<span>petsitter</span>.</a
           >
           <p>©2021 AmandaAnay</p>
-          <p>Todos os direitos reservados.</p>
+          <p>All Rights Reserved.</p>
         </div>
 
         <div class="ongs">
